# vdftool

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  create-release.yml
src/: cli.rs  json2vdf.rs  main.rs  vdf2json.rs
